<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/product_name_title"
                style="@style/CategoryStyle"
                android:layout_weight="1"
                android:text="@string/product_name_title" />

            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:layout_weight="2"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/quantity_title"
                style="@style/CategoryStyle"
                android:layout_weight="1"
                android:text="@string/product_quantity_title" />

            <EditText
                android:id="@+id/edit_product_quantity"
                style="@style/EditorFieldStyle"
                android:layout_weight="2"
                android:hint="@string/hint_product_quantity"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/price_title"
                style="@style/CategoryStyle"
                android:layout_weight="1"
                android:text="@string/product_price_title" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currency_unit" />

                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/EditorFieldStyle"
                    android:layout_width="match_parent"
                    android:hint="@string/hint_product_price"
                    android:inputType="numberDecimal" />
                <!--android:longClickable="false"
                    android:clickable="false"-->
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/supplier_contact_title"
                style="@style/CategoryStyle"
                android:layout_weight="1"
                android:text="@string/product_supplier_title" />

            <EditText
                android:id="@+id/edit_product_supplier"
                style="@style/EditorFieldStyle"
                android:layout_weight="2"
                android:hint="@string/hint_product_supplier"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <View
            android:id="@+id/line_one"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/activity_margin"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/quantitylayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin">

            <View
                android:id="@+id/dummy1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5" />

            <Button
                android:id="@+id/quantity_increment_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:text="@string/increment" />

            <View
                android:id="@+id/dummy2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2" />

            <EditText
                android:id="@+id/quantity_to_change"
                style="@style/EditorFieldStyle"
                android:layout_weight="2"
                android:hint="@string/hint_quantity_to_adjust"
                android:inputType="number"
                android:textAlignment="center" />

            <View
                android:id="@+id/dummy3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2" />

            <Button
                android:id="@+id/quantity_decrement_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:text="@string/decrement" />

            <View
                android:id="@+id/dummy4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5" />

        </LinearLayout>

        <View
            android:id="@+id/line_two"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/activity_margin"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5" />

            <Button
                android:id="@+id/new_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/new_image" />

            <View
                android:id="@+id/buttonsMiddleSpace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4" />

            <Button
                android:id="@+id/order_product_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/ListItem_margin"
                android:layout_weight="1"
                android:text="@string/order_button_text" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5" />

        </LinearLayout>

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_margin"
            android:contentDescription="Item Image"
            android:scaleType="fitCenter"
            tools:src="@mipmap/ic_launcher" />
    </LinearLayout>
</ScrollView>