<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".ShopActivity">

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/ListItem_margin"
            android:text="@string/title_name"
            android:textAppearance="?android:textAppearanceLarge" />

        <TextView
            android:id="@+id/title_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/ListItem_margin"
            android:text="@string/title_quantity"
            android:textAppearance="?android:textAppearanceSmall" />

        <TextView
            android:id="@+id/totle_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_price"
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>

    <Button
        android:id="@+id/sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:clickable="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/sale" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/sale_button"
        android:layout_toRightOf="@id/title_layout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:paddingBottom="@dimen/ListItem_margin"
            android:textAppearance="?android:textAppearanceLarge"
            tools:text="Product Name" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/ListItem_margin"
            android:textAppearance="?android:textAppearanceSmall"
            tools:text="Quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                tools:text="10.00" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>